完成jwt验证
